docs: update WeChat promotional article for v4.0.4
- Version v4.0.3 → v4.0.4 beta
- macOS: added Intel download links alongside Apple Silicon
- Windows: added CPU + CUDA-GPU download links (GitHub/Drive/Baidu)
- Inserted SuperPickyXiaohongshu.mp4 demo video
- Fixed macOS requirement to 14+ (was 11.0+)
- Download buttons linked to website download section

--- a/docs/wechat/慧眼选鸟_微信公众号宣传稿.md
+++ b/docs/wechat/慧眼选鸟_微信公众号宣传稿.md
@@ -15,6 +15,9 @@
 
 现在，**慧眼选鸟 SuperPicky v4** 正式发布！它不仅是您的**智能选片助理**，更是您的**博学鸟类专家**。
 
+<!-- 演示视频 -->
+<video src="https://superpicky.jamesphotography.com.au/img/V_4_0_0/SuperPickyXiaohongshu.mp4" controls style="width:100%"></video>
+
 ---
 
 ## 为什么选择慧眼选鸟？
@@ -77,15 +80,28 @@
 
 我们相信，好的工具应该让更多人享受到摄影的乐趣。
 
-### macOS 版本 (v4.0.3)
-支持 Apple Silicon (M1/M2/M3/M4)机型。
-- [GitHub 下载](https://github.com/jamesphotography/SuperPicky/releases/latest)
-- [百度网盘下载](https://pan.baidu.com/s/1DqtszhrSILBDe4aRAbLvYQ?pwd=c7f5) (提取码: c7f5)
-- [Google Drive](https://drive.google.com/file/d/1TcW4fZD7J5Aq0mixXNvCQZukyZIO2-e4/view?usp=sharing)
+### macOS 版本 (v4.0.4 beta)
 
-### Windows 版本 (v4.0.1 Beta)
-支持 Windows 10/11 x64。
-- [百度网盘下载](https://pan.baidu.com/s/17NZppCRIax_aYfrFt5EJJg?pwd=cnyu) (提取码: cnyu)
+**Apple Silicon (M1/M2/M3/M4)**
+- [GitHub 下载](https://github.com/jamesphotography/SuperPicky/releases/download/v4.0.4/SuperPicky_v4.0.4.dmg)
+- [百度网盘下载](https://pan.baidu.com/s/1OGiZYBFaKYpxPZDHfLxFwA?pwd=i1eq) (提取码: i1eq)
+- [Google Drive](https://drive.google.com/file/d/1JpPJUjSe64YJL-E-4nn8lsIqtDXae7CH/view?usp=sharing)
+
+**Intel x64**
+- [GitHub 下载](https://github.com/jamesphotography/SuperPicky/releases/download/v4.0.4/SuperPicky_v4.0.4_Intel.dmg)
+- [百度网盘下载](https://pan.baidu.com/s/1iyDhNj1QP-Vg82QN9yoACQ?pwd=xh6u) (提取码: xh6u)
+- [Google Drive](https://drive.google.com/file/d/1DghPd1yBRkMjEdM-GpxGNV8GFQBXgXiS/view?usp=sharing)
+
+### Windows 版本 (v4.0.4 beta)
+
+**CPU 版本 (1GB)**
+- [GitHub 下载](https://github.com/jamesphotography/SuperPicky/releases/download/v4.0.4/SuperPicky4.0.4_Win64_No_CUDA.zip)
+- [百度网盘下载](https://pan.baidu.com/s/1zhWtMwAzthrLAeKxKf4SZw?pwd=2mrt) (提取码: 2mrt)
+- [Google Drive](https://drive.google.com/file/d/1QWfDsb4L7wMoUoo17p6iiW1L9Lf-OAEv/view?usp=sharing)
+
+**CUDA-GPU 版本 (3.4GB)**
+- [百度网盘下载](https://pan.baidu.com/s/1dM79au9DpnWZQoWdUISPQA?pwd=1usg) (提取码: 1usg)
+- [Google Drive](https://drive.google.com/file/d/1QkBqBYxylpIlN7jByVUC3m9QEM40DYga/view?usp=sharing)
 
 ---
 
