--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -712,7 +712,7 @@
   "about": {
     "window_title": "About James",
     "subtitle": "AI Photo Selector",
-    "content": "James Yu\nAustralian-Chinese Professional Photographer, Author of \"James' Landscape Photography Notes\" Trilogy\n\nContact\njames@jamesphotography.com.au\nsuperpicky.jamesphotography.com.au\n\nBird Eye Detection Model: Jordan Yu\nWindows Version: Xiaoping, Lyapunov\n\nOpen Source Models\nYOLO11 - Bird Detection (AGPL-3.0)\nTOPIQ - Aesthetic Scoring by Chaofeng Chen et al. (IEEE TIP 2024)\n  github.com/chaofengc/IQA-PyTorch\n  License: CC BY-NC-SA 4.0\n\n© 2024-2025 James Yu"
+    "content": "James Yu\nAustralian-Chinese Professional Photographer, Author of \"James' Landscape Photography Notes\" Trilogy\n\nModel Training: Jordan Yu\nDevelopment Team: Xiaoping, Lyapunov, osk.sh\n\nOpen Source Models\nYOLO11 - Bird Detection (AGPL-3.0)\nTOPIQ - Aesthetic Scoring by Chaofeng Chen et al. (IEEE TIP 2024)\n  github.com/chaofengc/IQA-PyTorch\n  License: CC BY-NC-SA 4.0\n\n© 2024-2025 James Yu"
   },
   "birdid": {
     "title": "Bird ID",
