--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -736,7 +736,15 @@
     "search_country_placeholder": "搜索国家...",
     "country_dialog_title": "选择国家",
     "country_prompt_title": "选择识别区域",
-    "country_prompt_message": "当前使用「自动检测 GPS」模式。\n\n如果您的照片没有 GPS 信息，建议选择国家/地区以获得更准确的识别结果。\n\n是否现在选择？"
+    "country_prompt_message": "当前使用「自动检测 GPS」模式。\n\n如果您的照片没有 GPS 信息，建议选择国家/地区以获得更准确的识别结果。\n\n是否现在选择？",
+    "info_yolo_ok": "慧眼: 检测到鸟类",
+    "info_yolo_fail": "慧眼: 未检测到鸟类",
+    "info_gps": "GPS: {lat}, {lon} | {count}",
+    "info_region": "区域: {region} | {count}",
+    "info_global": "全球模式（无地理过滤）",
+    "info_no_bird_hint": "建议降低检测敏感度或重新拍摄",
+    "info_identify_fail": "识别失败",
+    "info_no_result": "未能识别"
   },
   "rating_engine": {
     "reject_no_bird": "未检测到鸟类",
@@ -792,6 +800,7 @@
     "gps_info": "🌍 GPS位置: {info}",
     "ebird_info": "🗺️  eBird过滤: {region} ({count} 种)",
     "no_bird": "⚠️  未能识别出鸟类",
+    "no_bird_hint": "💡 建议：降低检测敏感度或重新拍摄",
     "result_title": "\n🐦 识别结果 (Top-{count}):",
     "confidence_skip": "  ⚠️  置信度 {confidence:.1f}% < {threshold}%，跳过写入",
     "exif_success": "  ✅ EXIF写入成功",
