chore(release): prepare for v4.0.6 (docs, constants, readme)

--- a/locales/zh_CN.json
+++ b/locales/zh_CN.json
@@ -2,7 +2,7 @@
   "_meta": {
     "language_name": "简体中文",
     "language_code": "zh_CN",
-    "version": "4.0.5"
+    "version": "4.0.6"
   },
   "app": {
     "title": "慧眼选鸟 by 詹姆斯于震 V{version} ({hash})",
@@ -568,7 +568,7 @@
     "normalization": "锐度归一化方法，影响大小鸟之间的公平性"
   },
   "help": {
-    "welcome_title": "欢迎使用 SuperPicky V4.0.5 - 慧眼选鸟 | 比你更聪明的选片工具",
+    "welcome_title": "欢迎使用 SuperPicky V{version} - 慧眼选鸟 | 比你更聪明的选片工具",
     "usage_steps_title": "使用步骤：",
     "step1": "点击'浏览'选择照片目录（支持RAW/JPG）",
     "step2": "调整三星与精选参数（可选，推荐默认值）",
@@ -693,7 +693,7 @@
   "about": {
     "window_title": "关于",
     "subtitle": "AI 智能选片助手",
-    "content": "开发者\n詹姆斯·于震 (James Yu)\n澳大利亚华裔职业摄影师\n《詹姆斯的风光摄影笔记》三部曲作者\n\n模型训练：Jordan Yu\n开发团队：小平, Lyapunov, osk.sh\n\n开源模型\nYOLO11 - 鸟类检测 (AGPL-3.0)\nTOPIQ - 美学评分\n  作者: Chaofeng Chen 等 (IEEE TIP 2024)\n  github.com/chaofengc/IQA-PyTorch\n  许可证: CC BY-NC-SA 4.0\n\n© 2024-2025 詹姆斯·于震"
+    "content": "开发者\n詹姆斯·于震 (James Yu)\n澳大利亚华裔职业摄影师\n《詹姆斯的风光摄影笔记》三部曲作者\n\n模型训练：Jordan Yu\n开发团队：小平, Lyapunov, osk.sh\n\n开源模型\nYOLO11 - 鸟类检测 by Ultralytics\nOSEA - 鸟类识别 by Sun Jiao\nTOPIQ - 美学评分 by Chaofeng Chen et al.\n\n许可证: GPL-3.0\n© 2024-2025 詹姆斯·于震"
   },
   "birdid": {
     "title": "鸟类识别",
